--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "@repo/db",
+  "name": "@repo/schema",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "prisma": "^5.19.1"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.19.1"
-  },
   "exports": {
-    "./client": "./index.js"
+    "./signup": "./index.js"
   }
 }
